Optimize data loading pipeline for faster training

--- a/notebooks/tensorflow_course/10_practice_transfer_learning_fine_tuning.ipynb
+++ b/notebooks/tensorflow_course/10_practice_transfer_learning_fine_tuning.ipynb
@@ -35,12 +35,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Creating helper functions\n",
+        "## Get helper functions\n",
         "We've created a bunch of helper function, let's import it.\n",
         "\n",
         "It's a good idea to put functions you'll want to use again in a script you can download and import into your notebooks (or elsewhere)\n",
         "\n",
-        "We've done this for some of the functions we've used previously here: https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py"
+        "We've done this for some of the functions we've used previously here: https://raw.githubusercontent.com/kishan5111/Deep_Learning_Vault/main/notebooks/tensorflow_course/helper_functions.py"
       ],
       "metadata": {
         "id": "HImEJyKfeIKB"
@@ -50,22 +50,22 @@
       "cell_type": "code",
       "source": [
         "# Connect to GPU\n",
-        "!nvidia-smi"
+        "!nvidia-smi -L"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HJk_C1WRqPHS",
-        "outputId": "3130146b-ceaa-4809-a086-da006d887dde"
+        "outputId": "3ef8da66-b49e-49a7-886a-40c3b2103841"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/bin/bash: nvidia-smi: command not found\n"
+            "GPU 0: Tesla T4 (UUID: GPU-1619d7a4-a1da-4d2a-5625-b88391ba8245)\n"
           ]
         }
       ]
@@ -73,31 +73,31 @@
     {
       "cell_type": "code",
       "source": [
-        "!wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py"
+        "!wget https://raw.githubusercontent.com/kishan5111/Deep_Learning_Vault/main/notebooks/tensorflow_course/helper_functions.py"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nFua4E4levGr",
-        "outputId": "0032f6a0-3859-44ab-a7f5-8f0df767d891"
+        "outputId": "e6bc4ae3-e15e-4934-946f-56c3e783ff13"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-07-11 09:23:37--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.108.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "--2023-09-14 09:30:13--  https://raw.githubusercontent.com/kishan5111/Deep_Learning_Vault/main/notebooks/tensorflow_course/helper_functions.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 10246 (10K) [text/plain]\n",
+            "Length: 10415 (10K) [text/plain]\n",
             "Saving to: ‘helper_functions.py’\n",
             "\n",
-            "helper_functions.py 100%[===================>]  10.01K  --.-KB/s    in 0s      \n",
+            "\rhelper_functions.py   0%[                    ]       0  --.-KB/s               \rhelper_functions.py 100%[===================>]  10.17K  --.-KB/s    in 0s      \n",
             "\n",
-            "2023-07-11 09:23:38 (84.1 MB/s) - ‘helper_functions.py’ saved [10246/10246]\n",
+            "2023-09-14 09:30:13 (90.2 MB/s) - ‘helper_functions.py’ saved [10415/10415]\n",
             "\n"
           ]
         }
@@ -112,7 +112,7 @@
       "metadata": {
         "id": "ecNgAjU8ez7A"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -229,7 +229,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Note:** We will use same 10% data of food101 dataset for all models."
+        "> **Note:** We will use same 10% data of food101 dataset for all models."
       ],
       "metadata": {
         "id": "I2kWWTxKgtKv"
